# stellavue

./: Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
docs/: PROTOCOL.md
src/: index.html  main.rs
src/camera/: mod.rs
src/stepper/: mod.rs  rotation_speeds.json  rotation_state.rs  stepper_event.rs
src/system/: mod.rs  system_event.rs  system_state.rs
src/web/: mod.rs  protocol.rs  server.rs  system_event.rs
src/web/webapp/: index.html  index.js  stylesheet.css
src/wifi/: mod.rs
util/: stepper_rotation_speed.py
