[package]
name = "stellavue"
version = "0.1.0"
authors = ["Herren Yann Cédric <yann.herren@students.bfh.ch>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "stellavue"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
mpu6050-dmp = "0.6.0"
embedded-hal-bus = "0.3.0"
embedded-hal = { version = "1" }
serde_json = "1.0.141"
serde = { version = "1.0.219", features = ["derive"] }

[build-dependencies]
embuild = "0.33"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "1.8.2" }
